--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "github-releases": "0.4.x",
     "glob": "3.x",
     "grunt": "^0.4.5",
-    "jade": "~0.35.0",
+    "pug": "3.0.x",
     "method-override": "^2.3.5",
     "minidump": "0.19.0",
     "mkdirp": "~0.3.5",
